<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Leña y Carbon</string>
    <string name="database_name">BD POLLERIA</string>
    <string name="mi_perfil">Mi Perfil</string>
    <string name="nombre_test">Nombre de Usuario</string>
    <string name="email_test">Email@Email.com</string>
    <string name="telefono_test">987654321</string>
    <string name="editar_perfil">Editar Perfil</string>
    <string name="mis_pedidos">Mis Pedidos</string>
    <string name="mis_direcciones">Mis Direcciones</string>
    <string name="mis_favoritos">Mis Favoritos</string>
    <string name="mis_tarjetas">Mis Tarjetas</string>
    <string name="lista_productos">Lista de Productos</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="ingresa_cuenta">Ingresa con tu cuenta</string>
    <string name="olvide_contrasena"><u>¿Olvidaste tu contraseña?</u></string>
    <string name="ingresa_usuario">Ingresa tu email o teléfono</string>
    <string name="ingresa_contrasena">Ingresa tu contraseña</string>
    <string name="registrate">Regístrate</string>
    <string name="iniciar_sesion">Iniciar Sesión</string>
    <string name="eslogan">Pasión por el Sabor</string>
    <string name="crea_cuenta">Crea una nueva cuenta</string>
    <string name="nombre_completo">Nombre completo</string>
    <string name="email">Email</string>
    <string name="contrasena">Contraseña</string>
    <string name="confirmar_contrasena">Confirmar contraseña</string>
    <string name="terminos_condiciones">Estoy de acuerdo con las <font color='#B02625'><u>políticas de privacidad</u></font> y los <font color='#B02625'><u>términos &amp; condiciones</u></font>.</string>
    <string name="tienes_cuenta">¿Ya tienes una cuenta?  <font color='#B02625'><u>Inicia sesión</u></font></string>
    <string name="btn_start">Ingresar</string>
    <string name="Hola">Hola user</string>
    <string name="PreguntaBienvenida">¿Qué se te antoja hoy?</string>
    <string name="search">Busca tu favorito</string>
    <string name="cambiar_contrasena">Cambiar Contraseña</string>
    <string name="guardar">Guardar</string>
    <string name="telefono">Telefono</string>
    <string name="contrasena_actual">Contraseña actual</string>
    <string name="new_password">Nueva contraseña</string>
    <string name="confirm_new_password">Confirmar nueva contraseña</string>
    <string name="direccion_test">Casa de Tía Consuelo</string>
    <string name="editar">Editar</string>
    <string name="producto">Producto</string>
    <string name="producto_test">Pollo Entero Tradicional</string>
    <string name="descripcion">Descripcion</string>
    <string name="descripcion_test">Pollo + Papas + Ensalada y Cremas</string>
    <string name="precio">Precio S/</string>
    <string name="precio_test">99.99</string>
    <string name="agregar_nueva_direccion">Agregar nueva dirección</string>
    <string name="nombre_alias">Nombre / Alias</string>
    <string name="descripcion_direccion">Descripcion de dirección</string>
    <string name="detalle_direccion">Detalle de la dirección</string>
    <string name="cambiar">Cambiar</string>
    <string name="direccion_descripcion_test">Jr. Montecarlo 250 int. 203 - San Miguel</string>
    <string name="direccion_detalle_test">Ingresar por la Av. Antunez de Mayolo - Casa de fachada crema</string>
    <string name="pedido_test">Pedido #555888</string>
    <string name="pedido_descripcion_test">Promo 69.90, Porcion de tequeños - S/89.90</string>
    <string name="pedido_detalle_test">Fecha 01/01/2023</string>
    <string name="estado">Entregado</string>
    <string name="count">1</string>
    <string name="tiempo_delivery">Tiempo de delivery</string>
    <string name="time_45">45 mins</string>
    <string name="precio_total">Precio Total</string>
    <string name="moneda">S/</string>
    <string name="categoria_pollos">Pollos</string>
    <string name="categoria_parrillas">Parrillas</string>
    <string name="categoria_promociones">Promociones</string>
    <string name="carrito">Carrito</string>
    <string name="continuar_compra">Continuar compra</string>
    <string name="cantidad" tools:ignore="Typos">Cant:</string>
    <string name="cont_desc_floating_add">Agregar</string>
    <string name="agregar_nueva_tarjeta">Agregar nueva tarjeta</string>
    <string name="nro_tarjeta">Nro. de Tarjeta</string>
    <string name="cvv">CVV</string>
    <string name="mm_aa">MM/AA</string>
    <string name="nombre_propietario">Nombre del propietario</string>
    <string name="agregar">Agregar</string>
    <string name="agradecimiento">¡ Muchas gracias por su compra !</string>
    <string name="regresar">Regresar</string>
    <string name="nombres">Nombres</string>
    <string name="apellidos">Apellidos</string>
    <string name="agregar_carrito">Agregar al carrito</string>
    <string name="tabs">Tabs</string>
    <string name="pago">Pago</string>
    <string name="pago_tarjeta">Pago con tarjeta</string>
    <string name="pago_efectivo">Pago en efectivo</string>
    <string name="editar_direccion">Editar dirección</string>
    <string name="tarjeta_test">Carla BBVA</string>
    <string name="tarjeta_desc_test">#### - #### - #### - 4875</string>
    <string name="tarjeta_fecha_test">05/2029</string>
    <string name="puntuacion">5.0</string>
    <string name="select_distrito">Seleccione el distrito</string>
    <string name="dialog_direccion_pregunta">¿Esta seguro de escoger la siguiente dirección?</string>
    <string name="input_nombre">Nombres</string>
    <string name="cerrar_sesion">Cerrar Sesión</string>
</resources>