<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_login"
    tools:context=".presentation.perfilUsuario.LoginActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/lycLogo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center">
        <androidx.constraintlayout.utils.widget.ImageFilterView
            android:layout_width="130dp"
            android:layout_height="130dp"
            app:srcCompat="@drawable/logo"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/eslogan"
            android:fontFamily="@font/marckscript"
            android:textColor="@color/red"
            android:textSize="20sp"/>
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/lycBienvenida"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="30dp"
        android:layout_marginStart="34dp"
        android:layout_marginEnd="5dp"
        app:layout_constraintTop_toBottomOf="@id/lycLogo">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/bienvenido"
            android:textSize="24sp"
            android:textColor="@color/black"
            android:fontFamily="@font/poppinsregular"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="28dp"
            android:text="@string/ingresa_cuenta"
            android:textSize="16sp"
            android:fontFamily="@font/poppinsregular"/>
    </androidx.appcompat.widget.LinearLayoutCompat>




    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/lycInputs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/lycBienvenida">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="9dp"
            app:cardBackgroundColor="@color/white"
            android:layout_marginBottom="12dp">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:hint="@string/ingresa_usuario">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etUsuario"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:lines="1" />
            </com.google.android.material.textfield.TextInputLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="10dp"
            app:cardBackgroundColor="@color/white"
            android:layout_marginBottom="20dp">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:hint="@string/ingresa_contrasena"
                app:passwordToggleEnabled="true">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/olvide_contrasena"
            android:textAlignment="textEnd"
            android:textColor="@color/red"/>
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/lycBotones"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="38dp"
        android:elevation="10dp"
        app:layout_constraintTop_toBottomOf="@id/lycInputs">
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnIngresar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/iniciar_sesion"
            android:textAllCaps="false"
            android:letterSpacing="0.1"
            android:backgroundTint="@color/red"
            android:layout_marginBottom="10dp"
            android:padding="12dp"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnRegistrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/registrate"
            android:textAllCaps="false"
            android:letterSpacing="0.1"
            android:backgroundTint="@color/white"
            android:textColor="@color/red"
            android:padding="12dp"/>

    </androidx.appcompat.widget.LinearLayoutCompat>



</androidx.constraintlayout.widget.ConstraintLayout>