<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.login.LoginActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/lycLogo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="25dp"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center">
        <androidx.constraintlayout.utils.widget.ImageFilterView
            android:layout_width="120dp"
            android:layout_height="90dp"
            app:srcCompat="@drawable/logo"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/eslogan"
            android:fontFamily="@font/marckscript"
            android:textColor="@color/red"
            android:textSize="14sp"/>
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/lycBienvenida"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:layout_marginStart="34dp"
        android:layout_marginEnd="5dp"
        app:layout_constraintTop_toBottomOf="@id/lycLogo">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/registrate"
            android:textSize="22sp"
            android:textColor="@color/black"
            android:fontFamily="@font/poppinsregular"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/crea_cuenta"
            android:textSize="16sp"
            android:fontFamily="@font/poppinsregular"/>
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/lycInputs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/lycBienvenida">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="9dp"
            app:cardBackgroundColor="@color/white"
            android:layout_marginBottom="12dp">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nombre_completo">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etNombreCompleto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:lines="1"/>
            </com.google.android.material.textfield.TextInputLayout>

        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="9dp"
            app:cardBackgroundColor="@color/white"
            android:layout_marginBottom="12dp">
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:lines="1" />
            </com.google.android.material.textfield.TextInputLayout>

        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="9dp"
            app:cardBackgroundColor="@color/white"
            android:layout_marginBottom="12dp">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/contrasena">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etContrasena"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:lines="1" />
            </com.google.android.material.textfield.TextInputLayout>

        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="9dp"
            app:cardBackgroundColor="@color/white"
            android:layout_marginBottom="6dp">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/confirmar_contrasena">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etConfirmarContrasena"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:lines="1" />
            </com.google.android.material.textfield.TextInputLayout>

        </androidx.cardview.widget.CardView>
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/terminos_condiciones"/>

        </androidx.appcompat.widget.LinearLayoutCompat>


    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/lycBotones"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:elevation="10dp"
        app:layout_constraintTop_toBottomOf="@id/lycInputs">
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnIngresar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/registrate"
            android:textAllCaps="false"
            android:letterSpacing="0.08"
            android:backgroundTint="@color/red"
            android:layout_marginBottom="10dp"
            android:padding="10dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tienes_cuenta"
            android:textAlignment="textEnd"/>

    </androidx.appcompat.widget.LinearLayoutCompat>



</androidx.constraintlayout.widget.ConstraintLayout>