<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardElevation="5dp"
    android:layout_marginTop="11.5dp"
    android:layout_marginStart="18.5dp"
    android:layout_marginEnd="18.5dp"
    android:layout_marginBottom="11.5dp"
    app:cardCornerRadius="15dp"
    app:cardPreventCornerOverlap="false">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/lycTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="11dp"
        android:paddingBottom="10dp"
        android:orientation="vertical">
        <!--Titulo-->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvPedidoNumero"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:fontFamily="@font/font_poppins"
                android:text="@string/pedido_test"
                android:textSize="20sp"
                android:textStyle="bold" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/tvPedidoEstado"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/test"
                android:text="@string/estado"
                android:textAllCaps="false"
                android:textColor="@color/gris_principal"
                android:textSize="12sp"
                android:textStyle="bold"
                app:cornerRadius="10dp"
                app:strokeColor="@color/gris_principal"
                app:strokeWidth="1.8dp" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <!--Detalle 1-->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvPedidoDescripcion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pedido_descripcion_test" />
        </androidx.appcompat.widget.LinearLayoutCompat>
        <!--Detalle 2-->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp">

            <TextView
                android:id="@+id/tvPedidoFecha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pedido_detalle_test" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.appcompat.widget.LinearLayoutCompat>

</com.google.android.material.card.MaterialCardView>